TEST_PROGRAMS/VALID/09/for_loops.go
// Various allowed for loops
package for_loops

func main() {
    for ; ; i++ {
    }
}
