TEST_PROGRAMS/INVALID/03/invalid_for7.go
package main
func main() {
	for {
	}
	// "While" loop
	for x < 10 {
	}

	for i < 10; i++ {
	}; //semi after for
}
